Fix `BusGroup.DEFAULT.trim()` not being called after mod load complete
Saves some memory by trimming various backing collections of loaded EventBuses on the default BusGroup