@@ -6,6 +6,7 @@
 package net.minecraftforge.fml;
 
 import com.google.common.collect.ImmutableList;
+import net.minecraftforge.eventbus.api.bus.BusGroup;
 import net.minecraftforge.fml.event.IModBusEvent;
 import net.minecraftforge.fml.loading.FMLEnvironment;
 import net.minecraftforge.fml.loading.FMLLoader;
@@ -232,7 +233,8 @@ public class ModLoader {
         for (IModLoadingState mls : stateList) {
             dispatchAndHandleError(mls, syncExecutor, parallelExecutor, periodicTask, progress);
         }
-        statusConsumer.accept(String.format("Mod loading complete - %d mods loaded", this.modList.size()));
+        parallelExecutor.execute(BusGroup.DEFAULT::trim);
+        statusConsumer.accept("Mod loading complete - %d mods loaded".formatted(this.modList.size()));
         progress.complete();
     }
 
